[FIX] event 요소 클릭시에도 dateClick이 가능하도록 z-index 수정하기 #NADA-50

--- a/src/styles/Calendar.scss
+++ b/src/styles/Calendar.scss
@@ -116,6 +116,7 @@ td[role="gridcell"]{
 div.fc-daygrid-day-events {
     position: relative;
     top: 5px;
+    z-index: -1; // event 요소를 선택해도 dateClick이 가능하도록
 }
 
 a.fc-event-start{
